# pipecat-moss

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: moss-CreateIndex-demo.py  moss-create-index-demo.py  moss-retrieval-demo.py
src/: __init__.py  client.py  retrieval.py
src/pipecat_moss/: __init__.py  moss_index_processor.py  moss_retrieval_service.py  retrieval.py
