[project]
name = "pipecat-moss"
version = "0.1.0"
description = "InferEdge Moss vector search integration for Pipecat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inferedge-moss>=1.0.0b5",
    "loguru>=0.7.0",
    "pipecat-ai>=0.0.94",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "aiortc>=1.14.0",
    "cartesia>=2.0.17",
    "daily-python>=0.21.0",
    "deepgram-sdk>=3.2.0,<5.0.0",
    "fastapi>=0.121.2",
    "opencv-python>=4.11.0.86",
    "pipecat-ai[runner]>=0.0.94",
    "python-dotenv>=1.2.1",
]
